--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ntn-boilerplate",
+  "name": "ArmatAnalytics",
   "version": "2.1.4",
-  "description": "Nuxt-Tailwind-NetlifyCMS boilerplate",
-  "author": "Sven Parker <hello+dev@svenparker.com> (https://svenparker.com)",
+  "description": "Armat Analytics is a Functional Service Provider specialized in statistical programming, data management and clinical database design.",
+  "author": "Pargev Melikyan",
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -11,26 +11,36 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Knogobert/ntn-boilerplate#readme"
+    "url": "https://github.com/TopSoftSolutions/ArmatAnalytics-netlify"
   },
   "license": "MIT",
   "dependencies": {
     "@nuxt/content": "^1.15.1",
-    "nuxt": "^2.15.8"
+    "nuxt": "^2.15.8",
+    "aos": "^2.3.4",
+    "bootstrap": "^4.6.1",
+    "bootstrap-vue": "^2.21.2",
+    "core-js": "^3.19.3",
+    "jquery": "^3.6.0",
+    "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14",
+    "vue-template-compiler": "^2.6.14",
+    "webpack": "^4.46.0"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^2.1.1",
-    "@nuxtjs/pwa": "^3.3.5",
     "@nuxtjs/svg": "^0.4.0",
-    "@nuxtjs/tailwindcss": "^4.2.1",
+    "@babel/eslint-parser": "^7.16.3",
+    "@nuxtjs/eslint-config": "^8.0.0",
+    "@nuxtjs/eslint-module": "^3.0.2",
+    "@types/aos": "^3.0.4",
     "eslint": "^8.14.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-nuxt": "^3.1.0",
+    "eslint-plugin-vue": "^8.2.0",
     "netlify-cli": "^10.1.0",
     "nuxt-purgecss": "^1.0.0",
-    "postcss": "^8.4.13",
-    "postcss-easing-gradients": "^3.0.1",
-    "postcss-preset-env": "^7.4.4",
     "prettier": "^2.6.2",
     "vue-content-placeholders": "^0.2.1"
   }
