--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap-vue": "^2.22.0",
     "core-js": "^3.19.3",
     "jquery": "^3.6.0",
+    "lodash": "^4.17.21",
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
