--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -39,36 +39,69 @@ collections:
               pattern: ['^[a-z]{2}([-])?([A-Za-z]{2})?$', 'Must match "xx" or "xx-XX" syntax (ex. "en" or "sv-SE")'],
             }
           # - { label: Site Email, name: siteemail, widget: string, required: false }
-  - name: 'blog'
-    label: 'Blog'
-    folder: 'content/blog'
-    create: true
-    format: 'frontmatter'
-    slug: '{{fields.createdAt}}-{{slug}}'
-    # editor:
-    #   preview: true
-    fields:
-      - { label: 'Created Date', name: 'createdAt', widget: 'datetime', date_format: 'YYYY-MM-DD', time_format: false }
-      - { label: 'Title', name: 'title', widget: 'string', required: true }
-      - { label: 'Description', name: 'description', widget: 'string', required: false }
-      - { label: 'Body', name: 'body', widget: 'markdown', required: false }
-      - {
-          label: 'Gallery',
-          name: 'gallery',
-          widget: 'list',
-          required: false,
-          summary: '{{fields.image}}',
-          field: { label: 'Image', name: 'image', widget: 'image' },
-        }
   - name: 'reporting'
     label: 'Reporting'
     folder: 'content/reporting'
     create: true
     format: 'frontmatter'
     slug: '{{slug}}'
-    preview_path: 'projects/{{slug}}'
+    preview_path: 'reporting/{{slug}}'
     fields:
       - { label: 'Title', name: 'title', widget: 'string', required: true }
-      # - { label: 'Body', name: 'body', widget: 'markdown', required: false }
       - { label: 'Icon', name: 'icon', widget: 'image', required: true, allow_multiple: false }
       - { label: 'Sort Key', name: 'sortkey', widget: 'number', required: false }
+  - name: 'dataManagement'
+    label: 'Data Management'
+    folder: 'content/dataManagement'
+    create: true
+    editor:
+      preview: false
+    format: 'frontmatter'
+    slug: '{{slug}}'
+    preview_path: 'dataManagement/{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string', required: true }
+      - { label: 'Icon', name: 'icon', widget: 'image', required: true, allow_multiple: false }
+      - { label: 'Icon Background Color', name: 'color', widget: 'color', allowInput: true }
+      - { label: 'Sort Key', name: 'sortkey', widget: 'number', required: false }
+
+  - name: 'aboutus'
+    label: 'About us'
+    folder: 'content/aboutus'
+    create: true
+    editor:
+      preview: false
+    format: 'frontmatter'
+    slug: '{{slug}}'
+    preview_path: 'aboutus/{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string', required: true }
+      - { label: 'Body', name: 'body', widget: 'markdown', required: true }
+      - { label: 'Image', name: 'image', widget: 'image', required: true, allow_multiple: false }
+
+  - name: 'ourmission'
+    label: 'Our mission'
+    folder: 'content/ourmission'
+    create: true
+    editor:
+      preview: false
+    format: 'frontmatter'
+    slug: '{{slug}}'
+    preview_path: 'ourmission/{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string', required: true }
+      - { label: 'Body', name: 'body', widget: 'markdown', required: true }
+      - { label: 'Image', name: 'image', widget: 'image', required: true, allow_multiple: false }
+
+  - name: 'ourservices'
+    label: 'Our Services'
+    folder: 'content/ourservices'
+    create: true
+    editor:
+      preview: false
+    format: 'frontmatter'
+    slug: '{{slug}}'
+    preview_path: 'ourservices/{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string', required: true }
+      - { label: 'Body', name: 'body', widget: 'markdown', required: true }
