--- a/package.json
+++ b/package.json
@@ -41,8 +41,10 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.2.0",
     "netlify-cli": "^10.1.0",
+    "node-sass": "^7.0.1",
     "nuxt-purgecss": "^1.0.0",
     "prettier": "^2.6.2",
+    "sass-loader": "^10.1.1",
     "vue-content-placeholders": "^0.2.1"
   }
 }
