added why join section in careers page

--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -146,4 +146,30 @@ collections:
       - { label: 'Title', name: 'title', widget: 'string', required: true }
       - { label: 'Description', name: 'description', widget: 'string', required: true }
       - { label: 'Background Image', name: 'image', widget: 'image', required: true, allow_multiple: false }
-
+  - name: 'keytosuccess'
+    label: 'Key to Success'
+    folder: 'content/keytosuccess'
+    create: true
+    editor:
+      preview: false
+    format: 'frontmatter'
+    slug: '{{slug}}'
+    preview_path: 'keytosuccess/{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string', required: true }
+      - { label: 'Description', name: 'description', widget: 'string', required: true }
+      - { label: 'Background Image', name: 'image', widget: 'image', required: true, allow_multiple: false }
+  - name: 'whyjoin'
+    label: 'Why Join'
+    folder: 'content/whyjoin'
+    create: true
+    editor:
+      preview: false
+    format: 'frontmatter'
+    slug: '{{slug}}'
+    preview_path: 'whyjoin/{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string', required: true }
+      - { label: 'Description ', name: 'description', widget: 'string', required: true }
+      - { label: 'Icon', name: 'icon', widget: 'image', required: true, allow_multiple: false }
+      - { label: 'Sort Key', name: 'sortkey', widget: 'number', required: false }
