--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "MIT",
   "dependencies": {
     "@nuxt/content": "^1.15.1",
+    "@nuxtjs/markdownit": "^2.0.0",
     "aos": "^2.3.4",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
