added Submit page

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@nuxt/content": "^1.15.1",
     "@nuxtjs/markdownit": "^2.0.0",
+    "@nuxtjs/recaptcha": "^1.1.1",
     "aos": "^2.3.4",
     "bootstrap": "^4.6.1",
     "bootstrap-vue": "^2.22.0",
