--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -216,3 +216,16 @@ collections:
         fields:
           - { label: 'Title', name: 'title', widget: 'string', required: true }
       - { label: 'Description', name: 'description', widget: 'markdown', required: true }
+  - name: 'submitwrap'
+    label: 'Submit Wrap'
+    folder: 'content/submitwrap'
+    create: true
+    editor:
+      preview: false
+    format: 'frontmatter'
+    slug: '{{slug}}'
+    preview_path: 'submitwrap/{{slug}}'
+    fields:
+      - { label: 'Title', name: 'title', widget: 'string', required: false }
+      - { label: 'Background Image', name: 'image', widget: 'image', required: false, allow_multiple: false }
+      - { label: 'Image Overlay Color', name: 'color', widget: 'color', allowInput: true }
