--- a/.example.env
+++ b/.example.env
@@ -1,4 +1,4 @@
 URL='https://armatanalytics.netlify.app'
-RECAPTCHA_SITE_KEY='6Le9fBQhAAAAABkWc1xr8QIW3DoPUo-tjMua59Ri'
-RECAPTCHA_SITE_SECRET='6Le9fBQhAAAAAJzm9utv3SrbsQWNWdNp946mTihZ'
+SITE_RECAPTCHA_KEY='6Le9fBQhAAAAABkWc1xr8QIW3DoPUo-tjMua59Ri'
+SITE_RECAPTCHA_SECRET='6Le9fBQhAAAAAJzm9utv3SrbsQWNWdNp946mTihZ'
 # GIT_LFS_ENABLED=true
