--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "nuxt": "^2.15.8",
     "vue": "^2.6.14",
     "vue-server-renderer": "^2.6.14",
-    "vue-template-compiler": "^2.6.14"
+    "vue-template-compiler": "^2.6.14",
+    "vue-typer": "^1.2.0"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.16.3",
